--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,14 @@
 ---
 title: "Polin's Website"
+#Let's add all the files to our git staging area
+#git add -A #the -A flag tells it git you want everything
+
+#Now we can commit
+#git commit -m "My first website commit. The begining of greatness"
+
+#Now we push. Note the addendum to normal pushing
+#git push origin master
 ---
 
 Hi Zupigu!!!
+
