--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -1,15 +1,13 @@
 ---
 title: "R Note"
-#Let's add all the files to our git staging area
-#git add -A #the -A flag tells it git you want everything
+output:
+  html_document:
+    toc: true
+    toc_float: true
 
-#Now we can commit
-#git commit -m "My first website commit. The begining of greatness"
-
-#Now we push. Note the addendum to normal pushing
-#git push origin master
 ---
-## Fixed Effect and Robust Standard Errors
+**************
+## Fixed Effect \& Clustering
 ```{r, message=FALSE, warning=FALSE,echo=TRUE,include=TRUE}
 # Loading the required libraries
 library(plm)
@@ -48,3 +46,5 @@ stargazer(coeftest(fe.firm, vcov=vcovHC(fe.firm, type="sss", cluster="time")),fe
 stargazer(coeftest(fe.firm, vcov=vcovDC(fe.firm, type="sss")),felm(y~x|firmid|0|firmid+year,data=petersen),type='html')
 
 ```
+**************
+## test2
