--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,17 @@ title: "Polin's Website"
 #Now we push. Note the addendum to normal pushing
 #git push origin master
 ---
-
-Hi Zupigu!!!
-
+****************
+> Doctoral Student
+>
+> Department of Insurance Legal Studies, and Real Estate
+>
+> 288A Brooks Hall 
+>
+> Terry College of Business
+>
+> University of Georgia
+>
+> Athens, GA, 30602
+>
+> Email: [polinwang@uga.edu](polinwang@uga.edu)
