--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -8,6 +8,8 @@ output:
 ---
 **************
 ## Fixed Effect \& Clustering
+
+Two ways of getting fixed effect estimation and clustering standard errors: `plm` and `felm`. They are consistent when one way fixed effect, and are slightly different in degree of freedom adjustment when multiple dimension fixed effect.
 ```{r, message=FALSE, warning=FALSE,echo=TRUE,include=TRUE}
 # Loading the required libraries
 library(plm)
@@ -46,5 +48,16 @@ stargazer(coeftest(fe.firm, vcov=vcovHC(fe.firm, type="sss", cluster="time")),fe
 stargazer(coeftest(fe.firm, vcov=vcovDC(fe.firm, type="sss")),felm(y~x|firmid|0|firmid+year,data=petersen),type='html')
 
 ```
+
 **************
-## test2
+
+## Debugging
+
+- Function to trace back to upper level: `recover()`.
+
+**************
+
+## R Markdown Note
+
+- Link: `[link](http://xxxx.com)`
+- Quote: `>abc`
