--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -9,7 +9,7 @@ output:
 **************
 ## Fixed Effect \& Clustering
 
-Two ways of getting fixed effect estimation and clustering standard errors: `plm` and `felm`. They are consistent when one way fixed effect, and are slightly different in degree of freedom adjustment when multiple dimension fixed effect.
+Two ways of getting fixed effect estimation and clustering standard errors: `plm` and `felm`. They are consistent without fixed effect, and are slightly different in degree of freedom adjustment when running with either one or both dimensions of fixed effect.
 ```{r, message=FALSE, warning=FALSE,echo=TRUE,include=TRUE}
 # Loading the required libraries
 library(plm)
