--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -7,7 +7,7 @@ output:
 
 ---
 **************
-## Fixed Effect \& Clustering
+### Fixed Effect \& Clustering
 
 Two ways of getting fixed effect estimation and clustering standard errors: `plm` and `felm`. They are consistent without fixed effect, and are slightly different in degree of freedom adjustment when running with either one or both dimensions of fixed effect.
 ```{r, message=FALSE, warning=FALSE,echo=TRUE,include=TRUE}
@@ -57,13 +57,13 @@ stargazer(coeftest(fe.firm,vcov=vcovDC(fe.firm,type="sss")),
 
 **************
 
-## Debugging
+### Debugging
 
 - Function to trace back to upper level: `recover()`.
 
 **************
 
-## R Markdown Note
+### R Markdown Note
 
 - Link: `[link](http://xxxx.com)`
 - Quote: `>abc`
@@ -71,13 +71,13 @@ stargazer(coeftest(fe.firm,vcov=vcovDC(fe.firm,type="sss")),
 
 **************
 
-## Relevel Factor
+### Relevel Factor
 
 - Change reference group to: `relevel(RATING,4)`
 
 **************
 
-## A List of Regressions
+### A List of Regressions
 
 Apply the regression function on a list of data gives a flexibility and convenience to run hundreds of regression models just with 3~4 lines of code.
 
@@ -145,7 +145,7 @@ stargazer::stargazer(my_lm[2],type='html',dep.var.labels=my_dep[2])
 
 ***********
 
-## Multiple Boxplot
+### Multiple Boxplot
 
 ```{r, message=FALSE, warning=FALSE, stageOne,echo=FALSE,include=FALSE}
 load(paste(Root,"Projects/Project1/MainData_RATING_REIN_WR_test.Rta",sep=""))
