--- a/rnote.Rmd
+++ b/rnote.Rmd
@@ -10,6 +10,9 @@ output:
 ### Fixed Effect \& Clustering
 
 Two ways of getting fixed effect estimation and clustering standard errors: `plm` and `felm`. They are consistent without fixed effect, and are slightly different in degree of freedom adjustment when running with either one or both dimensions of fixed effect.
+
+> When both a firm and a time effect are present in the data, researchers can address one parametrically (e.g., by including time dummies) and then estimate standard errors clustered on the other dimension. Alternatively, researchers can cluster on multiple dimensions. When there are a sufficient number of clusters in each dimension, standard errors clustered on multiple dimensions are unbiased and produce correctly sized confidence intervals whether the firm effect is permanent or temporary. ~ Petersen (2008)
+
 ```{r, message=FALSE, warning=FALSE,echo=TRUE,include=TRUE}
 # Loading the required libraries
 library(plm)
