--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ title: "Polin Wang"
 | Doctoral Student
 |
 | Department of Insurance Legal Studies, and Real Estate
-| 288A Brooks Hall 
+| B417 Amos Hall 
 | Terry College of Business
 | University of Georgia
 | Athens, GA, 30602
