--- a/about.Rmd
+++ b/about.Rmd
@@ -2,4 +2,4 @@
 title: "About Me"
 ---
 **************
-I am a PhD candidate in the Department of Insurance, Legal Studies, and Real Estate (ILSRE) in the Terry College of Business at the University of Georgia. My research interests include martality modeling, asset liability management, generational wealth accounts, and market discipline.
+I am a PhD candidate in the Department of Insurance, Legal Studies, and Real Estate (ILSRE) in the Terry College of Business at the University of Georgia. I currently also work as a research associate for a research grant funded by Economic and Social Research Council (ESRC), titled as "Changes in the distribution of resources across generations in both the UK and the US". My research interests include martality modeling, asset liability management, generational wealth accounts, and market discipline. 
