My first website

--- a/french.Rmd
+++ b/french.Rmd
@@ -1,9 +1,6 @@
 ---
-title: "ggplot2 Brushing"
-output: 
-  flexdashboard::flex_dashboard:
-    social: menu
-    source_code: embed
+title: "French mortality test"
+output: html_document
 runtime: shiny
 ---
 
@@ -16,10 +13,11 @@ library(DT)
 library(rmapshaper)
 library(raster)
 library(shiny)
+library(rgdal)
 
 #fr.prj <- readOGR(dsn="~/Google Drive/UGA/MortalityModel/FrenchDep/gadm34_FRA_shp",  layer="gadm34_FRA_2")
 fr.prj<-getData('GADM', country='FRA', level=2)
-
+#id = as.numeric(as.character(fr.prj@data$CC_2))
 id = as.numeric(as.character(fr.prj@data$CCA_2))
 id[is.na(id)] = 20
 fr.prj <- ms_simplify(fr.prj)
@@ -35,7 +33,7 @@ endC   = 1950
 cc     = which(cohort==startC):which(cohort==endC)
 
 
-kk = sapply(depts,function(i)results[[1]][[i]][cc,2])
+kk = sapply(depts,function(i)results[[1]][[i]][cc,1])
 kk = kk[,1:length(fr.prj)]
 
 kk = kk[,id]
