My first website

--- a/index.Rmd
+++ b/index.Rmd
@@ -39,6 +39,9 @@ Mortality modeling, asset liability management, generational wealth accounts, an
 #### Society of Actuary (SOA) Exams Completed:
 P, FM, MFE, MLC, and C
 
+#### Award
+2018 Harris Schlesinger Doctoral Student Paper Award
+"An analysis of period and cohort mortality shocks in international data"
 
 ************
 
