--- a/index.Rmd
+++ b/index.Rmd
@@ -28,20 +28,27 @@ title: "Polin Wang"
 
 
 #### Research Interests
+
 Mortality modeling, asset liability management, generational wealth accounts, and market discipine
 
+#### CV
+
+[Download my CV](https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing)
+
 #### Programming Languages
+
 - VBA (professional with insurance pricing and reserving experience)
 - Prophet (professional with insurance pricing and reserving experience)
 - Matlab (asset liability optimization projects)
 - R (recently developed interests in)
 
 #### Society of Actuary (SOA) Exams Completed:
+
 P, FM, MFE, MLC, and C
 
 #### Award
+
 2018 Harris Schlesinger Doctoral Student Paper Award
-"An analysis of period and cohort mortality shocks in international data"
 
 ************
 
