--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ title: "Polin Wang"
 
 #### Curriculum vitae
 
-[Download my CV](https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing)
+Download my [CV](https://drive.google.com/file/d/1YbXezDE1gGo8kL_dIz6GE9ALaCwGrxOB/view?usp=sharing)
 
 #### Research Interests
 
