My first website

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,9 +44,11 @@ Mortality modeling, asset liability management, generational wealth accounts, an
 
 P, FM, MFE, MLC, and C
 
-#### Award
+#### Awards and Honors
 
-2018 Harris Schlesinger Doctoral Student Paper Award
+- 2018 Harris Schlesinger Doctoral Student Paper Award
+- 2018 University of Georgia RMIN Summer Research Scholarship
+- 2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)
 
 ************
 
