--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Polin Wang"
+title: "Po-Lin Wang"
 #Let's add all the files to our git staging area
 #git add -A #the -A flag tells it git you want everything
 
