My first website

--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ P, FM, MFE, MLC, and C
 
 #### Awards and Honors
 
-- 2018 Harris Schlesinger Doctoral Student Paper Award
+- 2018 Harris Schlesinger Memorial Doctoral Research Award
 - 2018 University of Georgia RMIN Summer Research Scholarship
 - 2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)
 
